Implement fetching samples by sample list